# -*- coding: utf-8 -*-
# Generated by Django 1.11.4 on 2017-09-29 14:25
from __future__ import unicode_literals

import django.contrib.gis.db.models.fields
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('nfdcore', '0005_auto_20170919_1506'),
    ]

    operations = [
        migrations.CreateModel(
            name='NaturalAreaLocation',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('site_description', models.TextField(blank=True, default='', null=True)),
                ('directions', models.TextField(blank=True, default='', null=True)),
                ('polygon', django.contrib.gis.db.models.fields.PolygonField(null=True, srid=4326)),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Reservation',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.TextField(unique=True)),
                ('name', models.TextField()),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='TaxonLocation',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('site_description', models.TextField(blank=True, default='', null=True)),
                ('directions', models.TextField(blank=True, default='', null=True)),
                ('polygon', django.contrib.gis.db.models.fields.PolygonField(null=True, srid=4326)),
                ('parcel', models.TextField(blank=True, default='', null=True)),
                ('city_township', models.TextField(blank=True, default='', null=True)),
                ('county', models.TextField(blank=True, default='', null=True)),
                ('quad_name', models.TextField(blank=True, default='', null=True)),
                ('quad_number', models.TextField(blank=True, default='', null=True)),
                ('reservation', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='nfdcore.Reservation')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Watershed',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.TextField(unique=True)),
                ('name', models.TextField()),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.AddField(
            model_name='taxonlocation',
            name='watershed',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='nfdcore.Watershed'),
        ),
        migrations.AddField(
            model_name='naturalarealocation',
            name='reservation',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='nfdcore.Reservation'),
        ),
        migrations.AddField(
            model_name='naturalarealocation',
            name='watershed',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='nfdcore.Watershed'),
        ),
        migrations.AddField(
            model_name='occurrencenaturalarea',
            name='location',
            field=models.OneToOneField(null=True, on_delete=django.db.models.deletion.CASCADE, to='nfdcore.NaturalAreaLocation'),
        ),
        migrations.AddField(
            model_name='occurrencetaxon',
            name='location',
            field=models.OneToOneField(null=True, on_delete=django.db.models.deletion.CASCADE, to='nfdcore.TaxonLocation'),
        ),
    ]
